--- a/libbeat/docs/shared-docker.asciidoc
+++ b/libbeat/docs/shared-docker.asciidoc
@@ -137,10 +137,10 @@ Make sure you include the path to the host's journal. The path might be
 sudo docker run -d \
   --name={beatname_lc} \
   --user=root \
-  --volume="$(pwd)/{beatname_lc}.docker.yml:/usr/share/{beatname_lc}/{beatname_lc}.yml:ro" \
-  --volume="/var/lib/docker/containers:/var/lib/docker/containers:ro" \
-  --volume="/var/run/docker.sock:/var/run/docker.sock:ro" \
   --volume="/var/log/journal:/var/log/journal" \
+  --volume="/etc/machine-id:/etc/machine-id" \
+  --volume="/run/systemd:/run/systemd" \
+  --volume="/etc/hostname:/etc/hostname:ro" \
   {dockerimage} {beatname_lc} -e -strict.perms=false \
   -E output.elasticsearch.hosts=["elasticsearch:9200"] <1> <2>
 --------------------------------------------
