--- a/CHANGELOG.next.asciidoc
+++ b/CHANGELOG.next.asciidoc
@@ -101,6 +101,8 @@ https://github.com/elastic/beats/compare/v7.0.0-alpha2...master[Check the HEAD d
 
 *Functionbeat*
 
+- Fix function name reference for Kinesis streams in CloudFormation templates {pull}11646[11646]
+
 ==== Added
 
 *Affecting all Beats*
