[metricbeat] Raid metricset with expanded disk states, using /sys/block (#11613)
Migrate the system/raid metricset to use sysfs, and expand RAID states and disk reporting

--- a/metricbeat/docs/fields.asciidoc
+++ b/metricbeat/docs/fields.asciidoc
@@ -25586,12 +25586,32 @@ Name of the device.
 
 --
 
-*`system.raid.activity_state`*::
+*`system.raid.status`*::
 +
 --
 type: keyword
 
 activity-state of the device.
+
+
+--
+
+*`system.raid.level`*::
++
+--
+type: keyword
+
+The raid level of the device
+
+
+--
+
+*`system.raid.sync_action`*::
++
+--
+type: keyword
+
+Current sync action, if the RAID array is redundant 
 
 
 --
@@ -25616,12 +25636,42 @@ Total number of disks the device consists of.
 
 --
 
+*`system.raid.disks.spare`*::
++
+--
+type: long
+
+Number of spared disks.
+
+
+--
+
+*`system.raid.disks.failed`*::
++
+--
+type: long
+
+Number of failed disks.
+
+
+--
+
+*`system.raid.disks.states.*`*::
++
+--
+type: object
+
+map of raw disk states
+
+
+--
+
 *`system.raid.blocks.total`*::
 +
 --
 type: long
 
-Number of blocks the device holds.
+Number of blocks the device holds, in 1024-byte blocks.
 
 
 --
@@ -25631,7 +25681,7 @@ Number of blocks the device holds.
 --
 type: long
 
-Number of blocks on the device that are in sync.
+Number of blocks on the device that are in sync, in 1024-byte blocks.
 
 
 --
