--- a/libbeat/docs/processors-using.asciidoc
+++ b/libbeat/docs/processors-using.asciidoc
@@ -214,6 +214,7 @@ ifdef::has_decode_csv_fields_processor[]
  * <<decode-csv-fields,`decode_csv_fields`>>
 endif::[]
  * <<decode-json-fields,`decode_json_fields`>>
+ * <<decode-base64-field,`decode_base64_field`>>
  * <<dissect, `dissect`>>
  * <<extract-array,`extract_array`>>
  * <<processor-dns, `dns`>>
@@ -863,6 +864,28 @@ is treated as if the field was not set at all.
 `overwrite_keys`:: (Optional) A boolean that specifies whether keys that already
 exist in the event are overwritten by keys from the decoded JSON object. The
 default value is false.
+
+[[decode-base64-field]]
+=== Decode Base64 field
+
+The `decode_base64_field` processor decodes field containing Base64 strings.
+
+[source,yaml]
+-----------------------------------------------------
+processors:
+ - decode_base64_field:
+     field: "field1"
+     target: ""
+-----------------------------------------------------
+
+The `decode_base64_field` processor has the following configuration settings:
+
+`field`:: The field containing Base64 strings to decode.
+`target`:: (Optional) The field under which the decoded Base64 will be written. By
+default the decoded Base64 object replaces the string field from which it was
+read.
+`target` with an empty string (`target: ""`). Note that the `null` value (`target:`)
+is treated as if the field was not set at all.
 
 [[community-id]]
 === Community ID Network Flow Hash
