--- a/metricbeat/docs/modules/etcd.asciidoc
+++ b/metricbeat/docs/modules/etcd.asciidoc
@@ -18,6 +18,13 @@ When using V2, metricsets available are `leader`, `self` and `store`.
 
 The etcd module is tested with etcd 3.2 and 3.3.
 
+[float]
+=== Dashboard
+
+ The ETCD module comes with a predefined dashboard:
+
+ image::./images/metricbeat-etcd.png[]
+
 
 [float]
 === Example configuration
