--- a/filebeat/module/elasticsearch/_meta/docs.asciidoc
+++ b/filebeat/module/elasticsearch/_meta/docs.asciidoc
@@ -66,7 +66,7 @@ Example config:
   audit:
     var.paths:
       - /var/log/elasticsearch/*_access.log
-      - /var/log/elasticsearch/*_audit.log
+      - /var/log/elasticsearch/*_audit.json
 ----
 
 [float]
