Change image references to use block syntax not inline

--- a/filebeat/docs/getting-started.asciidoc
+++ b/filebeat/docs/getting-started.asciidoc
@@ -283,4 +283,4 @@ by the dashboards.
 Here is an example of the Filebeat system dashboard:
 
 [role="screenshot"]
-image:./images/kibana-system.png[]
+image::./images/kibana-system.png[]
