--- a/journalbeat/docs/getting-started.asciidoc
+++ b/journalbeat/docs/getting-started.asciidoc
@@ -214,7 +214,7 @@ The dashboards are provided as examples. We recommend that you
 {kibana-ref}/dashboard.html[customize] them to meet your needs.
 
 [role="screenshot"]
-image:./images/journald-log-data.png[Journald data]
+image::./images/journald-log-data.png[Journald data]
 
 
 [NOTE]
