--- a/x-pack/auditbeat/docs/modules/system.asciidoc
+++ b/x-pack/auditbeat/docs/modules/system.asciidoc
@@ -42,7 +42,7 @@ parameter.
 The module comes with a sample dashboard:
 
 [role="screenshot"]
-image:./images/auditbeat-system-overview-dashboard.png[Auditbeat System Overview Dashboard]
+image::./images/auditbeat-system-overview-dashboard.png[Auditbeat System Overview Dashboard]
 
 [float]
 === Configuration options
