--- a/x-pack/auditbeat/module/system/login/_meta/docs.asciidoc
+++ b/x-pack/auditbeat/module/system/login/_meta/docs.asciidoc
@@ -12,4 +12,4 @@ It is implemented for Linux only.
 The dataset comes with a sample dashboard:
 
 [role="screenshot"]
-image:./images/auditbeat-system-login-dashboard.png[Auditbeat System Login Dashboard]
+image::./images/auditbeat-system-login-dashboard.png[Auditbeat System Login Dashboard]
