--- a/metricbeat/docs/modules/aws.asciidoc
+++ b/metricbeat/docs/modules/aws.asciidoc
@@ -115,8 +115,8 @@ metricbeat.modules:
 - module: aws
   period: 300s
   metricsets:
-    - "ec2"
-    - "sqs"
+    - ec2
+    - sqs
   access_key_id: '${AWS_ACCESS_KEY_ID:""}'
   secret_access_key: '${AWS_SECRET_ACCESS_KEY:""}'
   session_token: '${AWS_SESSION_TOKEN:""}'
@@ -124,8 +124,8 @@ metricbeat.modules:
 - module: aws
   period: 86400s
   metricsets:
-    - "s3_request"
-    - "s3_daily_storage"
+    - s3_request
+    - s3_daily_storage
   access_key_id: '${AWS_ACCESS_KEY_ID:""}'
   secret_access_key: '${AWS_SECRET_ACCESS_KEY:""}'
   session_token: '${AWS_SESSION_TOKEN:""}'
@@ -133,7 +133,7 @@ metricbeat.modules:
 - module: aws
   period: 300s
   metricsets:
-    - "cloudwatch"
+    - cloudwatch
   access_key_id: '${AWS_ACCESS_KEY_ID:""}'
   secret_access_key: '${AWS_SECRET_ACCESS_KEY:""}'
   session_token: '${AWS_SESSION_TOKEN:""}'
