[Heartbeat] Fix NPE on monitor configuration errors (#11910)
These errors cause the `newMonitor` constructor to return a nil object plus error. Without a nil check we get an NPE.

Fixes https://github.com/elastic/beats/issues/11747

(cherry picked from commit ac37fa396973b587393c0722eb346a7df4820b57)

--- a/CHANGELOG.next.asciidoc
+++ b/CHANGELOG.next.asciidoc
@@ -40,6 +40,8 @@ https://github.com/elastic/beats/compare/v7.0.0...7.0[Check the HEAD diff]
 
 *Heartbeat*
 
+- Fix NPE on some monitor configuration errors. {pull}11910[11910]
+
 *Journalbeat*
 
 *Metricbeat*
