--- a/CHANGELOG.next.asciidoc
+++ b/CHANGELOG.next.asciidoc
@@ -90,6 +90,8 @@ https://github.com/elastic/beats/compare/v7.0.0-alpha2...master[Check the HEAD d
 
 *Journalbeat*
 
+- Use backoff when no new events are found. {pull}11861[11861]
+
 *Metricbeat*
 
 - Add _bucket to histogram metrics in Prometheus Collector {pull}11578[11578]
