--- a/libbeat/docs/processors-using.asciidoc
+++ b/libbeat/docs/processors-using.asciidoc
@@ -211,10 +211,13 @@ The supported processors are:
  * <<community-id,`community_id`>>
  * <<convert,`convert`>>
 ifdef::has_decode_csv_fields_processor[]
-* <<decode-csv-fields,`decode_csv_fields`>>
+ * <<decode-csv-fields,`decode_csv_fields`>>
 endif::[]
  * <<decode-json-fields,`decode_json_fields`>>
  * <<dissect, `dissect`>>
+ifeval::[("{beatname_lc}"=="filebeat") or ("{beatname_lc}"=="journalbeat")]
+ * <<extract-array,`extract_array`>>
+endif::[]
  * <<processor-dns, `dns`>>
  * <<drop-event,`drop_event`>>
  * <<drop-fields,`drop_fields`>>
@@ -1745,4 +1748,50 @@ thrown.
 
 *Example*: `event.AppendTo("error.message", "invalid file hash");`
 |===
+endif::[]
+
+ifeval::[("{beatname_lc}"=="filebeat") or ("{beatname_lc}"=="journalbeat")]
+* <<extract-array,`extract_array`>>
+[[extract-array]]
+=== Extract array
+
+experimental[]
+
+The `extract_array` processor populates fields with values read from an array
+field. The following example will populate `source.ip` with the first element of
+the `my_array` field, `destination.ip` with the second element and
+`network.transport` using the third.
+
+[source,yaml]
+-----------------------------------------------------
+processors:
+ - extract_array:
+     field: my_array
+     mappings:
+        source.ip: 0
+        destination.ip: 1
+        network.transport: 2
+-----------------------------------------------------
+
+The following settings are supported:
+
+`field`:: The array field whose elements are to be extracted.
+`mappings`:: A field name to array index mapping. Use 0 for the first element in
+             the array. Multiple fields can be mapped to the same array element.
+`ignore_missing`:: (Optional) Whether to ignore events where the array field is
+                   missing. The default is false, which will fail processing of
+                   an event if the specified field does not exist. Set it to
+                   `true` to ignore this condition.
+`overwrite_keys`:: Whether the target fields specified in the mapping are
+                   overwritten if they already exist. The default is false,
+                   which will fail processing of a target field already exists.
+`fail_on_error`:: (Optional) If set to true, in case of an error, changes to
+                  the event are reverted and the original event is returned. If
+                  set to false, processing continues if an error happens
+                  during processing. Default is `true`.
+`omit_empty`:: (Optional) Whether empty values are extracted from the array. If
+                  set to `true`, instead of the target field being set to an
+                  empty value, it is left unset. The empty string (`""`), an
+                  array with zero elements (`[]`) or an empty object (`{}`) are
+                  considered empty values. Default is `false`.
 endif::[]
