--- a/libbeat/docs/processors-using.asciidoc
+++ b/libbeat/docs/processors-using.asciidoc
@@ -780,7 +780,6 @@ Adds the environment field to every event:
 -------------------------------------------------------------------------------
 
 ifeval::[("{beatname_lc}"=="filebeat") or ("{beatname_lc}"=="journalbeat")]
-* <<decode-csv-fields,`decode_csv_fields`>>
 [[decode-csv-fields]]
 === Decode CSV fields
 
@@ -806,13 +805,13 @@ processors:
 The `decode_csv_fields` has the following settings:
 
 `fields`:: This is a mapping from the source field containing the CSV data to
-           the destination field where the decoded array will be written.
+           the destination field to which the decoded array will be written.
 `separator`:: (Optional) Character to be used as a column separator.
               The default is the comma character. For using a TAB character you
               must set it to "\t".
 `ignore_missing`:: (Optional) Whether to ignore events which lack the source
                    field. The default is false, which will fail processing of an
-                   event if `target` field is missing.
+                   event if a field is missing.
 `overwrite_keys`:: Whether the target field is overwritten if it
                    already exists. The default is false, which will fail
                    processing of an event when `target` already exists.
@@ -821,7 +820,7 @@ The `decode_csv_fields` has the following settings:
                        The default is false.
 `fail_on_error`:: (Optional) If set to true, in case of an error the changes to
 the event are reverted and the original event is returned. If set to false,
-processing continues also if an error happened during renaming. Default is `true`.
+processing continues also if an error happens. Default is `true`.
 
 endif::[]
 
