--- a/CHANGELOG.next.asciidoc
+++ b/CHANGELOG.next.asciidoc
@@ -36,6 +36,8 @@ https://github.com/elastic/beats/compare/v7.0.0...7.0[Check the HEAD diff]
 
 *Auditbeat*
 
+- Package dataset: Log error when Homebrew is not installed. {pull}11667[11667]
+
 *Filebeat*
 
 *Heartbeat*
