--- a/CHANGELOG-developer.next.asciidoc
+++ b/CHANGELOG-developer.next.asciidoc
@@ -14,9 +14,9 @@ Note: This changelog documents the current changes which are not yet present in
 an actual release.
 
 === Beats version HEAD
-https://github.com/elastic/beats/compare/v7.0.0-rc1..master[Check the HEAD diff]
+https://github.com/elastic/beats/compare/v7.0.1..master[Check the HEAD diff]
 
-The list below covers the major changes between 7.0.0-rc1 and master only.
+The list below covers the major changes between 7.0.1 and master only.
 
 ==== Breaking changes
 
