--- a/x-pack/metricbeat/module/aws/_meta/docs.asciidoc
+++ b/x-pack/metricbeat/module/aws/_meta/docs.asciidoc
@@ -43,8 +43,8 @@ metricbeat.modules:
 - module: aws
   period: 300s
   metricsets:
-    - "ec2"
-    - "sqs"
+    - ec2
+    - sqs
   access_key_id: '${AWS_ACCESS_KEY_ID}'
   secret_access_key: '${AWS_SECRET_ACCESS_KEY}'
   session_token: '${AWS_SESSION_TOKEN}'
