--- a/x-pack/metricbeat/module/aws/_meta/docs.asciidoc
+++ b/x-pack/metricbeat/module/aws/_meta/docs.asciidoc
@@ -54,7 +54,7 @@ metricbeat.modules:
 - module: aws
   period: 300s
   metricsets:
-    - "s3_daily_storage"
+    - s3_daily_storage
   access_key_id: '${AWS_ACCESS_KEY_ID}'
   secret_access_key: '${AWS_SECRET_ACCESS_KEY}'
   session_token: '${AWS_SESSION_TOKEN}'
