Update documentation with cloudwatch:ListMetrics permission

--- a/x-pack/metricbeat/module/aws/s3_request/_meta/docs.asciidoc
+++ b/x-pack/metricbeat/module/aws/s3_request/_meta/docs.asciidoc
@@ -8,4 +8,5 @@ Some specific AWS permissions are required for IAM user to collect AWS s3_reques
 ----
 ec2:DescribeRegions
 cloudwatch:GetMetricData
+cloudwatch:ListMetrics
 ----
