--- a/x-pack/metricbeat/module/aws/s3_daily_storage/_meta/docs.asciidoc
+++ b/x-pack/metricbeat/module/aws/s3_daily_storage/_meta/docs.asciidoc
@@ -8,4 +8,5 @@ Some specific AWS permissions are required for IAM user to collect AWS s3_daily_
 ----
 ec2:DescribeRegions
 cloudwatch:GetMetricData
+cloudwatch:ListMetrics
 ----
