--- a/x-pack/auditbeat/module/system/socket/_meta/docs.asciidoc
+++ b/x-pack/auditbeat/module/system/socket/_meta/docs.asciidoc
@@ -12,11 +12,11 @@ It is implemented for Linux only.
 On Linux, the dataset uses the
 http://man7.org/linux/man-pages/man7/sock_diag.7.html[sock_diag netlink subsystem]
 to periodically receive a list of all sockets from the kernel. The polling frequency
-can be set using the `period` configuration parameter. A low value (e.g. `1s`) is
+can be set using the `period` configuration option. A low value (e.g. `1s`) is
 recommended to capture short-lived sockets.
 
 By default, sockets from or to `localhost` will be excluded. This can be controlled using
-the `socket.include_localhost` configuration parameter.
+the `socket.include_localhost` configuration option.
 
 [float]
 ==== Example dashboard
