--- a/libbeat/docs/loggingconfig.asciidoc
+++ b/libbeat/docs/loggingconfig.asciidoc
@@ -207,7 +207,7 @@ unix epoch. Defaults to disabled.
 endif::serverless[]
 
 [float]
-==== `logging.files.rotateonopen`
+==== `logging.files.rotateonstartup`
 
 If the log file already exists on startup, immediately rotate it and start
 writing to a new file instead of appending to the existing one. Defaults to
