Add aws s3 overview dashboard (#11274)

--- a/x-pack/metricbeat/module/aws/s3_daily_storage/_meta/docs.asciidoc
+++ b/x-pack/metricbeat/module/aws/s3_daily_storage/_meta/docs.asciidoc
@@ -10,3 +10,10 @@ ec2:DescribeRegions
 cloudwatch:GetMetricData
 cloudwatch:ListMetrics
 ----
+
+[float]
+=== Dashboard
+
+The aws s3 metricset comes with a predefined dashboard. For example:
+
+image::./images/metricbeat-aws-s3-overview.png[]
