[Auditbeat] Cherry-pick #11667 to 6.8: Log error when Homebrew not installed (#11949)
* [Auditbeat] Log error when Homebrew not installed (#11667)

Change `package` dataset on macOS to logging an error when Homebrew is not installed instead of failing to start altogether. It will keep checking and start sending events as usual in case Homebrew is installed later.

(cherry picked from commit bbe4991954c6dc357c943242ca93e766bd73a423)

--- a/CHANGELOG.next.asciidoc
+++ b/CHANGELOG.next.asciidoc
@@ -35,6 +35,8 @@ https://github.com/elastic/beats/compare/v6.7.2...6.8[Check the HEAD diff]
 
 *Auditbeat*
 
+- Package dataset: Log error when Homebrew is not installed. {pull}11667[11667]
+
 *Filebeat*
 
 - Fix goroutine leak happening when harvesters are dynamically stopped. {pull}11263[11263]
