--- a/metricbeat/module/system/socket/_meta/docs.asciidoc
+++ b/metricbeat/module/system/socket/_meta/docs.asciidoc
@@ -19,9 +19,11 @@ metricbeat.modules:
 <1> You can configure the `socket` metricset separately to specify a different
 `period` value than the other metricsets.
 
-The metricset reports the process that has the socket open. In order to provide
-this information for all processes in the system, Metricbeat must be run with
-`sys_ptrace` and `dac_read_search` Linux capabilities or with full privileges.
+The metricset reports the process that has the socket open. To provide this
+information on Linux for all processes, Metricbeat must be run with
+`sys_ptrace` and `dac_read_search` capabilities. These permissions are usually
+granted when running as root, but they can and may need to be explictly enabled
+when running metricbeat inside a container.
 
 [float]
 === Configuration
