add udp memory field

--- a/metricbeat/docs/fields.asciidoc
+++ b/metricbeat/docs/fields.asciidoc
@@ -26045,6 +26045,18 @@ All UDP connections
 
 
 
+*`system.socket.summary.udp.memory`*::
++
+--
+type: integer
+
+format: bytes
+
+Memory used by UDP sockets in bytes, based on number of allocated pages and system page size. Corresponds to limits set in /proc/sys/net/ipv4/udp_mem. Only available on Linux. 
+
+
+--
+
 [float]
 == all fields
 
