Cherry-pick to 7.1: Update documentation with cloudwatch:ListMetrics permission (#11987) (#12085)
* Update documentation with cloudwatch:ListMetrics permission (#11987)

(cherry picked from commit 262e51ac460dabcbff54dfe781478a605bda9e69)

* Fix changelog

--- a/CHANGELOG.next.asciidoc
+++ b/CHANGELOG.next.asciidoc
@@ -42,6 +42,8 @@ https://github.com/elastic/beats/compare/v7.0.0...7.1[Check the HEAD diff]
 
 *Metricbeat*
 
+- Update documentation with cloudwatch:ListMetrics permission. {pull}11987[11987]
+
 *Packetbeat*
 
 *Winlogbeat*
